app/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: NodePort
  selector:
    app: server
  ports:
  - port: 31000
    targetPort: 5000
    nodePort: 31000
