app/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: ipworkshop/key-value-app:1.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  # type: NodePort
  selector:
    app: server
  ports:
  - port: 31000
    targetPort: 5000
    # nodePort: 31000
