app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entrypoint
  labels:
    name: entrypoint
spec:
  ingressClassName: nginx
  rules:
  - http: 
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: server
            port: 
              number: 31000
